Best effort JPMS - added Automatic-Module-Name manifest header
* ..log.slf4j now supports [1.7.25,1.9)
* some corrections for packages in license file headers

A separate branch "jpms" explores adding module-info - while working,
it cannot be released due to dependence on filename-based auto-modules.