@@ -5,7 +5,7 @@
 	<parent>
         <groupId>io.earcam</groupId>
         <artifactId>io.earcam.utilitarian</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.1.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.earcam.utilitarian</groupId>
@@ -28,9 +28,19 @@
 	    <scm.tag.netlify.api>v0.0.3</scm.tag.netlify.api>
 
 		<skip.execution.pitest>false</skip.execution.pitest>
-		<dependency-check.skip>true</dependency-check.skip>
 		<revapi.skip>true</revapi.skip>
 		<earcam.project.name.short>site/deploy/netlify</earcam.project.name.short>
+
+		<!-- 
+			jacoco's argLine not merged,
+			even with 'combine.self="append"', 
+			but we can use late binding
+		-->
+		<surefire.argLine></surefire.argLine>
+		<jpms.supplimental.surefire.argLine>
+			--add-modules jdk.httpserver,java.activation 
+			--add-reads ${project.artifactId}=io.earcam.utilitarian.net
+		</jpms.supplimental.surefire.argLine>
 	</properties>
 
 	<dependencies>
@@ -148,6 +158,20 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>jdk9-test</id>
+						<configuration>
+							<argLine>@{surefire.argLine} ${jpms.supplimental.surefire.argLine}</argLine>
+						</configuration>
+					</execution>
+					<execution>
+						<id>jdk10-test</id>
+						<configuration>
+							<argLine>@{surefire.argLine} ${jpms.supplimental.surefire.argLine}</argLine>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
